feat: integrated Supabase for user data collection on sign-up

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <h1>Access Locked: Please Sign In</h1>
             <p>Sign in below to unlock your unlimited title and meta description ideas.</p>
             <div class="auth-form">
-                <input type="email" placeholder="Email Address">
-                <input type="password" placeholder="Password">
-                <button id="loginBtn" class="primary-btn">Sign In / Sign Up</button>
+                 <input type="email" id="userEmail" placeholder="Email Address">
+                 <input type="password" placeholder="Password"> 
+                 <button id="loginBtn" class="primary-btn">Sign Up & Unlock</button>
+                 <button id="loginBtn" class="primary-btn">Sign In / Sign Up</button>
             </div>
             <p class="mock-info">No real registration is required; this button saves your session locally.</p>
         </div>
