fix: resolved js syntax crash and html duplicate IDs

--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 
     <main class="container">
         <div id="auth-gate" style="display: none;">
-            <h1>Access Locked: Please Sign In</h1>
-            <p>Sign in below to unlock your unlimited title and meta description ideas.</p>
+            <h1>Access Locked: Please Sign Up</h1>
+            <p>Enter your email below to unlock the tool and save your access.</p>
             <div class="auth-form">
-                 <input type="email" id="userEmail" placeholder="Email Address">
-                 <input type="password" placeholder="Password"> 
-                 <button id="loginBtn" class="primary-btn">Sign Up & Unlock</button>
-                 <button id="loginBtn" class="primary-btn">Sign In / Sign Up</button>
+                <input type="email" id="userEmail" placeholder="Email Address">
+                <input type="password" placeholder="Password (Optional)"> 
+                <button id="loginBtn" class="primary-btn">Sign Up & Unlock Tool</button>
             </div>
-            <p class="mock-info">No real registration is required; this button saves your session locally.</p>
+            <p class="mock-info">We will save your email to our database for future use.</p>
         </div>
 
         <div id="app-content" style="display: none;">
